@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<menu
+  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:title="@string/str_settings" android:id="@+id/main_act_main_menu_settings"></item>
+    
+</menu>
