@@ -5,4 +5,9 @@
         <item>Red</item>
         <item>Great Color</item>
     </string-array>
+    <string-array name="settings_act_paint_width_names">
+        <item>Thin</item>
+        <item>Normal</item>
+        <item>Tick</item>
+    </string-array>
 </resources>
