@@ -3,6 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:summary="@string/settings_act_pref_cat_colors_summary" android:key="settings_act_pref_cat_colors" android:title="@string/settings_act_pref_cat_colors">
         <ListPreference android:entries="@array/settings_act_paint_color_names" android:entryValues="@array/settings_act_paint_color_values" android:dialogTitle="@string/settings_act_pref_paint_colors_dialog_title" android:summary="@string/settings_act_pref_paint_colors_pref_summary" android:title="@string/settings_act_pref_paint_colors_pref_title" android:key="settings_act_pref_paint_color"></ListPreference>
+        <ListPreference android:entryValues="@array/settings_act_paint_with_values" android:entries="@array/settings_act_paint_width_names" android:key="settings_act_pref_paint_width" android:summary="@string/settings_act_pref_paint_width_pref_summary" android:title="@string/settings_act_pref_paint_width_pref_title"></ListPreference>
     </PreferenceCategory>
     
 </PreferenceScreen>
