@@ -3,7 +3,14 @@ package org.blanco.sportstablet;
 import org.blanco.sportstablet.views.DrawingSurface;
 
 import android.app.Activity;
+import android.content.Intent;
+import android.content.SharedPreferences;
 import android.os.Bundle;
+import android.preference.PreferenceManager;
+import android.util.Log;
+import android.view.Menu;
+import android.view.MenuInflater;
+import android.view.MenuItem;
 import android.view.View;
 import android.widget.Button;
 import android.widget.LinearLayout;
@@ -21,6 +28,9 @@ public class MainActivity extends Activity implements
         initComponents();
     }
 
+    /***
+     * initiates the components of this activity
+     */
 	private void initComponents() {
 	
 		actionBar = (LinearLayout) findViewById(R.id.main_act_action_bar);
@@ -31,6 +41,9 @@ public class MainActivity extends Activity implements
 		surface = (DrawingSurface) findViewById(R.id.main_act_draw_surface);
 		if (surface == null)
 			Toast.makeText(this, "surface not found", 500).show();
+		else{
+			surface.setBackgroundDrawable(getResources().getDrawable(R.drawable.soccer_field));
+		}
 	}
     
     /***
@@ -45,6 +58,49 @@ public class MainActivity extends Activity implements
 			break;
 		}
 	}
+
+	/***
+	 * Inflate the options menu for the activity
+	 */
+	@Override
+	public boolean onCreateOptionsMenu(Menu menu) {
+		try{
+			new MenuInflater(this).inflate(R.menu.main_act_main_menu, menu);
+		}catch(Exception e){
+			Log.e(TAG, "Error Inflating Options Menu",e);
+		}
+		return super.onCreateOptionsMenu(menu);
+	}
+
+	@Override
+	public boolean onOptionsItemSelected(MenuItem item) {
+		switch(item.getItemId()){
+			case R.id.main_act_main_menu_settings:
+				startActivity(new Intent(this,SettingsActivity.class));
+				return true;
+			default:
+				return super.onOptionsItemSelected(item);
+		}
+	}
+	
+	@Override
+	protected void onStart() {
+		loadPaintPreferences();
+		super.onStart();
+	}
+
+	/***
+	 * Loads the preferences of the Paint from the application settings.
+	 */
+	private void loadPaintPreferences(){
+		SharedPreferences pref = PreferenceManager.getDefaultSharedPreferences(this);
+		//String color = pref.getString(SettingsActivity.PAINT_COLOR_PREF_NAME, "White"); //Default white
+		//surface.setPaintColor(Color.BLUE);
+		final String width = pref.getString(SettingsActivity.PAINT_WIDTH_PREF_NAME, "10.0"); //Default 10;
+		surface.reloadPaintWidth(Float.parseFloat(width));
+	}
+
+
 
 	LinearLayout actionBar = null;
     Button btnClear = null;
